--- a/src/components/FeaturedMovie.css
+++ b/src/components/FeaturedMovie.css
@@ -43,7 +43,8 @@
 }
 
 .featured--description {
-  margin-top: 15px;
+  margin-top: 20px;
+  margin-bottom: 30px;
   font-size: 20px;
   color: #999;
   max-width: 40%;
